<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kgaitonde.finalproject.ProfileEditActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEditFirstName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEditLastName"
        android:layout_below="@+id/editTextEditFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewGender"
        android:id="@+id/textViewEditGender"
        android:layout_above="@+id/imageViewEditAvatar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="53dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/toggleButtonEditGender"
        android:textOff="@string/switchOff"
        android:textOn="@string/switchOn"
        android:layout_alignTop="@+id/textViewEditGender"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageViewEditAvatar"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="53dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxPrivate"
        android:id="@+id/checkBoxEditPrivate"
        android:layout_alignTop="@+id/imageViewEditAvatar"
        android:layout_alignLeft="@+id/checkBoxEditPush"
        android:layout_alignStart="@+id/checkBoxEditPush"
        android:layout_marginTop="48dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxPush"
        android:id="@+id/checkBoxEditPush"
        android:layout_below="@+id/checkBoxEditPrivate"
        android:layout_toRightOf="@+id/toggleButtonEditGender"
        android:layout_toEndOf="@+id/toggleButtonEditGender" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSubmit"
            android:id="@+id/buttonEditSubmit"
            android:layout_weight="1" />

        <Button
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel"
            android:id="@+id/buttonEditCancel" />
    </LinearLayout>

</RelativeLayout>
