<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kgaitonde.finalproject.AlbumCreateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewCreateAlbumHeading"
        android:id="@+id/textViewAlbumEditHeading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAlbumEditName"
        android:layout_below="@+id/textViewAlbumEditHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:hint="Album Name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewAlbumCreatePrivateInfo"
        android:id="@+id/textViewAlbumEditPrivateInfo"
        android:layout_below="@+id/editTextAlbumEditName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:gravity="center" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxAlbumCreatePrivate"
        android:id="@+id/checkBoxAlbumCreatePrivate"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textViewAlbumEditPrivateInfo"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="62dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCreateAlbum"
            android:id="@+id/buttonCreateAlbum"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel"
            android:id="@+id/buttonCreateAlbumCancel"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
