<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonUsers"
        android:id="@+id/buttonUsers"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonAlbums"
        android:id="@+id/buttonAlbums"
        android:layout_below="@+id/buttonUsers"
        android:layout_alignRight="@+id/buttonUsers"
        android:layout_alignEnd="@+id/buttonUsers"
        android:layout_marginTop="67dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonMessages"
        android:id="@+id/buttonMessages"
        android:layout_below="@+id/buttonAlbums"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp" />
</RelativeLayout>
