<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kgaitonde.finalproject.SignupActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFirstName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="First Name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLastName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Last Name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:hint="Email/Username"
        android:layout_below="@+id/editTextLastName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:hint="Password"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPasswordConfirm"
        android:hint="Confirm Password"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageViewAvatar"
        android:src="@drawable/default_avatar"
        android:layout_above="@+id/linearLayout"
        android:layout_toLeftOf="@+id/checkBoxPrivate"
        android:layout_toStartOf="@+id/checkBoxPrivate"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSignup"
            android:id="@+id/buttonSignup"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel"
            android:id="@+id/buttonCancelSignup"
            android:layout_weight="1" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxPrivate"
        android:id="@+id/checkBoxPrivate"
        android:layout_marginTop="34dp"
        android:layout_alignTop="@+id/imageViewAvatar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxPush"
        android:id="@+id/checkBoxPush"
        android:layout_below="@+id/checkBoxPrivate"
        android:layout_alignLeft="@+id/checkBoxPrivate"
        android:layout_alignStart="@+id/checkBoxPrivate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewGender"
        android:id="@+id/textViewGender"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/toggleButtonGender"
        android:textOff="@string/switchOff"
        android:textOn="@string/switchOn"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/imageViewAvatar"
        android:layout_alignEnd="@+id/imageViewAvatar" />

</RelativeLayout>
